--- a/bad-credit.html
+++ b/bad-credit.html
@@ -187,7 +187,7 @@
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="mortgages.html#remortgages"
+                href="mortgages.html#remortgage"
                 class="dropdown-link hover-transition hover-pink"
                 >Re-Mortgages</a
               >
@@ -247,7 +247,7 @@
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
               <a
-                href="protection.html#protection-page-section"
+                href="protection.html#protection-page"
                 class="dropdown-link hover-transition hover-pink"
                 >Protection</a
               >
@@ -734,7 +734,7 @@
             regardless of your default.
           </p>
         </section>
-        <section id="self-emplyed">
+        <section id="self-employed">
           <h2>12. Self Employed No Accounts</h2>
           <p>
             Mortgage lenders treat self-employed profits the equivalent as an
