--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="mortgages.html#remortgages"
+                href="mortgages.html#remortgage"
                 class="dropdown-link hover-transition hover-pink"
                 >Re-Mortgages</a
               >
@@ -247,7 +247,7 @@
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
               <a
-                href="protection.html#protection-page-section"
+                href="protection.html#protection-page"
                 class="dropdown-link hover-transition hover-pink"
                 >Protection</a
               >
@@ -359,69 +359,198 @@
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Low Income</a>
+            <a href="bad-credit.html#low-income" class="uppercase txt-900"
+              >Low Income</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">No Proof Of Income</a>
+            <a href="bad-credit.html#no-proof-income" class="uppercase txt-900"
+              >No Proof Of Income</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">No credit History</a>
+            <a
+              href="bad-credit.html#no-credit-history"
+              class="uppercase txt-900"
+              >No credit History</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Low Credit Score</a>
+            <a href="bad-credit.html#low-credit-score" class="uppercase txt-900"
+              >Low Credit Score</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Repossession</a>
+            <a href="bad-credit.html#repossessions" class="uppercase txt-900"
+              >Repossession</a
+            >
           </li>
         </ul>
         <!-- Link List ------------------------>
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">IVA's</a>
+            <a href="bad-credit.html#ivas" class="uppercase txt-900">IVA's</a>
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">CCJ's</a>
+            <a href="bad-credit.html#ccjs" class="uppercase txt-900">CCJ's</a>
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Bankruptcy</a>
+            <a href="bad-credit.html#bankruptcy" class="uppercase txt-900"
+              >Bankruptcy</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Defaults</a>
+            <a href="bad-credit.html#defaults" class="uppercase txt-900"
+              >Defaults</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Payday Loans</a>
+            <a href="bad-credit.html#payday-loans" class="uppercase txt-900"
+              >Payday Loans</a
+            >
           </li>
         </ul>
         <!-- Link List -------------------------->
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Self Employed No Accounts</a>
+            <a href="bad-credit.html#self-employed" class="uppercase txt-900"
+              >Self Employed No Accounts</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Missed Mortgage Payments</a>
+            <a href="bad-credit.html#missed-payments" class="uppercase txt-900"
+              >Missed Mortgage Payments</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Adverse Credit Problems</a>
+            <a href="bad-credit.html#adverse-credit" class="uppercase txt-900"
+              >Adverse Credit Problems</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Low Deposit Schemes</a>
+            <a href="bad-credit.html#low-deposit" class="uppercase txt-900"
+              >Low Deposit Schemes</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Zero Hour Contracts</a>
+            <a
+              href="bad-credit.html#zero-hour-contracts"
+              class="uppercase txt-900"
+              >Zero Hour Contracts</a
+            >
+          </li>
+        </ul>
+      </section>
+      <!-- Link Wrap 2  ----------------------------->
+      <section class="link-list-wrap-two flex">
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#low-income" class="uppercase txt-900"
+              >Low Income</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#no-proof-income" class="uppercase txt-900"
+              >No Proof Of Income</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a
+              href="bad-credit.html#no-credit-history"
+              class="uppercase txt-900"
+              >No credit History</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#low-credit-score" class="uppercase txt-900"
+              >Low Credit Score</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#repossessions" class="uppercase txt-900"
+              >Repossession</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#ivas" class="uppercase txt-900">IVA's</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#ccjs" class="uppercase txt-900">CCJ's</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#bankruptcy" class="uppercase txt-900"
+              >Bankruptcy</a
+            >
+          </li>
+        </ul>
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#defaults" class="uppercase txt-900"
+              >Defaults</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#payday-loans" class="uppercase txt-900"
+              >Payday Loans</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#self-employed" class="uppercase txt-900"
+              >Self Employed No Accounts</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#missed-payments" class="uppercase txt-900"
+              >Missed Mortgage Payments</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#adverse-credit" class="uppercase txt-900"
+              >Adverse Credit Problems</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="bad-credit.html#low-deposit" class="uppercase txt-900"
+              >Low Deposit Schemes</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a
+              href="bad-credit.html#zero-hour-contracts"
+              class="uppercase txt-900"
+              >Zero Hour Contracts</a
+            >
           </li>
         </ul>
       </section>
@@ -431,7 +560,7 @@
 ------------------------------------------- -->
     <article class="panel bg-dark" id="credit-meter">
       <section id="credit-meter-wrap" class="flex">
-        <div class="quote-wrap">
+        <div class="quote-wrap" id="quote-wrap-1">
           <div
             class="quote bg-fuschia txt-white animate__animated animate__pulse animate__infinite"
             id="left-quote"
@@ -441,7 +570,7 @@
           <img src="assets/worried.png" alt="" class="speaker-img" />
         </div>
         <img src="assets/credit-rating.svg" alt="" id="credit-meter-img" />
-        <div class="quote-wrap">
+        <div class="quote-wrap" id="quote-wrap-2">
           <div
             class="quote bg-fuschia txt-white animate__animated animate__pulse animate__infinite"
             id="right-quote"
@@ -514,7 +643,9 @@
             >
           </h4>
           <h4 class="txt-white uppercase bg-dark">
-            Or<a href="mailto:info@directmortgagesuk.com" class="txt-fuschia"
+            Or<a
+              href="mailto:info@directmortgagesuk.com"
+              class="txt-fuschia mail"
               >info@directmortgagesuk.com</a
             >
           </h4>
@@ -577,38 +708,62 @@
             <ul class="link-list">
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">Low Income</a>
+                <a
+                  href="mortgages.html#mortgages-page-section"
+                  class="uppercase txt-900"
+                  >Mortgages</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">No Proof Of Income</a>
+                <a href="mortgages.html#remortgage" class="uppercase txt-900"
+                  >Re-Mortgages</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">No credit History</a>
+                <a href="mortgages.html#buy-to-let" class="uppercase txt-900"
+                  >Buy To Lets</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">Low Credit Score</a>
+                <a
+                  href="mortgages.html#first-time-buyers"
+                  class="uppercase txt-900"
+                  >First Time Buyers</a
+                >
               </li>
             </ul>
             <!-- Link List ------------------------>
             <ul class="link-list">
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">IVA's</a>
+                <a href="mortgages.html#let-to-buy" class="uppercase txt-900"
+                  >Let To Buy</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">CCJ's</a>
+                <a href="mortgages.html#council-rtb" class="uppercase txt-900"
+                  >Council Right To Buys</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">Bankruptcy</a>
+                <a
+                  href="mortgages.html#commercial-borrowing"
+                  class="uppercase txt-900"
+                  >Commercial Borrowing</a
+                >
               </li>
               <li class="flex">
                 <img src="assets/check.svg" alt="" class="check" />
-                <a href="#" class="uppercase txt-900">Defaults</a>
+                <a
+                  href="mortgages.html#bridge-finance"
+                  class="uppercase txt-900"
+                  >Bridge Finance</a
+                >
               </li>
             </ul>
           </div>
@@ -839,22 +994,28 @@
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Protection</a>
+            <a href="protection.html#protection-page" class="uppercase txt-900"
+              >Protection</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Life Insurance</a>
+            <a href="protection.html#life-insurance" class="uppercase txt-900"
+              >Life Insurance</a
+            >
           </li>
         </ul>
         <!-- Link List ------------------------>
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900">Critical Illness Cover</a>
+            <a href="protection.html#cic" class="uppercase txt-900"
+              >Critical Illness Cover</a
+            >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900"
+            <a href="protection.html#ipi" class="uppercase txt-900"
               >Income Protection Insurance</a
             >
           </li>
@@ -863,13 +1024,15 @@
         <ul class="link-list">
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900"
+            <a href="protection.html#asu" class="uppercase txt-900"
               >Accident, Sickness, Unemployment</a
             >
           </li>
           <li class="flex">
             <img src="assets/check.svg" alt="" class="check" />
-            <a href="#" class="uppercase txt-900"
+            <a
+              href="protection.html#building-contents"
+              class="uppercase txt-900"
               >Buildings & Contents Insurance</a
             >
           </li>
