--- a/mortgages.html
+++ b/mortgages.html
@@ -187,7 +187,7 @@
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="mortgages.html#remortgages"
+                href="mortgages.html#remortgage"
                 class="dropdown-link hover-transition hover-pink"
                 >Re-Mortgages</a
               >
@@ -247,7 +247,7 @@
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
               <a
-                href="protection.html#protection-page-section"
+                href="protection.html#protection-page"
                 class="dropdown-link hover-transition hover-pink"
                 >Protection</a
               >
@@ -342,11 +342,11 @@
       <ul class="contents">
         <li class="contents-heading">On this page:</li>
         <li><a href="#mortgages-page-section">1. Mortgages</a></li>
-        <li><a href="#remortgages">2. Re-Mortgages</a></li>
+        <li><a href="#remortgage">2. Re-Mortgages</a></li>
         <li><a href="#buy-to-let">3. Buy To Lets</a></li>
         <li><a href="#first-time-buyers">4. First Time Buyers</a></li>
         <li><a href="#let-to-buy">5. Let To Buy</a></li>
-        <li><a href="#council-rtby">6. Council Right To Buy</a></li>
+        <li><a href="#council-rtb">6. Council Right To Buy</a></li>
         <li><a href="#commercial-borrowing">7. Commercial Borrowing</a></li>
         <li><a href="#bridge-finance">8. Bridge Finance </a></li>
       </ul>
